[package]
name = "events-indexer"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
actix = "=0.13.0"
borsh = "0.9"
anyhow = "1.0.51"

openssl-probe = { version = "0.1.2" }
tokio = { version = "1.1", features = ["time", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
dotenv = "0.15.0"
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

nats = "0.23"

near-indexer = { git = "https://github.com/near/nearcore", rev = "1.28.0" }
